@@ -35,12 +35,12 @@
  */
 struct TAG_xmlkey;
 
-#define TOTAL_KEYWORDS 44
+#define TOTAL_KEYWORDS 46
 #define MIN_WORD_LENGTH 2
-#define MAX_WORD_LENGTH 10
-#define MIN_HASH_VALUE 4
-#define MAX_HASH_VALUE 111
-/* maximum key range = 108, duplicates = 0 */
+#define MAX_WORD_LENGTH 12
+#define MIN_HASH_VALUE 2
+#define MAX_HASH_VALUE 91
+/* maximum key range = 90, duplicates = 0 */
 
 #ifdef __GNUC__
 __inline
@@ -54,32 +54,32 @@ hash (register const char *str, register unsigned int len)
 {
   static const unsigned char asso_values[] =
     {
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112,   0,   5,   0,
-       15,   0,  45, 112,   0,  25,  10,  15,   5,  10,
-        5,   5,   0,  50,   0,   0,  10,  40,   5,  30,
-       20,   0,  10, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112, 112, 112, 112,
-      112, 112, 112, 112, 112, 112, 112
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92,  0,  5, 20,
+       0, 10, 25, 92,  0, 15, 15, 15,  0, 10,
+       5,  0, 10, 30, 20,  0, 30, 30, 45, 15,
+       0,  0, 15, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92, 92, 92, 92,
+      92, 92, 92, 92, 92, 92, 92
     };
   register int hval = len;
 
@@ -104,75 +104,69 @@ hash (register const char *str, register unsigned int len)
 static const struct TAG_xmlkey wordlist[] =
   {
     {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
-    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
-    {"proc",			XMLKEY_PROC},
-    {"error",			XMLKEY_ERROR},
-    {"parser",			XMLKEY_PARSER},
     {"op",			XMLKEY_OP},
     {"lex",			XMLKEY_LEX},
-    {"node",			XMLKEY_NODE},
-    {"epath",			XMLKEY_EPATH},
-    {"constr",			XMLKEY_CONSTR},
-    {"library",		XMLKEY_LIBRARY},
-    {"tag",			XMLKEY_TAG},
-    {"name",			XMLKEY_NAME},
+    {"decl",			XMLKEY_DECL},
+    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
+    {(char*)0,XMLKEY_INVALID},
+    {"language",		XMLKEY_LANGUAGE},
+    {"nocc",			XMLKEY_NOCC},
     {"lpath",			XMLKEY_LPATH},
     {"symbol",			XMLKEY_SYMBOL},
-    {"comment",		XMLKEY_COMMENT},
-    {"language",		XMLKEY_LANGUAGE},
-    {"namespace",		XMLKEY_NAMESPACE},
-    {"value",			XMLKEY_VALUE},
-    {"srcuse",			XMLKEY_SRCUSE},
-    {"allocvs",		XMLKEY_ALLOCVS},
-    {(char*)0,XMLKEY_INVALID},
-    {"nocc",			XMLKEY_NOCC},
-    {"srcinclude",		XMLKEY_SRCINCLUDE},
-    {"target",			XMLKEY_TARGET},
-    {"allocms",		XMLKEY_ALLOCMS},
-    {(char*)0,XMLKEY_INVALID},
-    {"desc",			XMLKEY_DESC},
-    {"maintainer",		XMLKEY_MAINTAINER},
-    {"adjust",			XMLKEY_ADJUST},
-    {"keyword",		XMLKEY_KEYWORD},
-    {(char*)0,XMLKEY_INVALID},
-    {"decl",			XMLKEY_DECL},
-    {"ipath",			XMLKEY_IPATH},
-    {(char*)0,XMLKEY_INVALID},
-    {"libunit",		XMLKEY_LIBUNIT},
-    {(char*)0,XMLKEY_INVALID},
-    {"blockinfo",		XMLKEY_BLOCKINFO},
     {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
+    {"name",			XMLKEY_NAME},
+    {"error",			XMLKEY_ERROR},
+    {"srcuse",			XMLKEY_SRCUSE},
+    {"nocc:libinfo",		XMLKEY_NOCC_LIBINFO},
+    {(char*)0,XMLKEY_INVALID},
+    {"node",			XMLKEY_NODE},
+    {"epath",			XMLKEY_EPATH},
+    {(char*)0,XMLKEY_INVALID},
     {"newname",		XMLKEY_NEWNAME},
     {(char*)0,XMLKEY_INVALID},
-    {"path",			XMLKEY_PATH},
+    {"proc",			XMLKEY_PROC},
+    {"ipath",			XMLKEY_IPATH},
     {(char*)0,XMLKEY_INVALID},
-    {"author",			XMLKEY_AUTHOR},
+    {"allocms",		XMLKEY_ALLOCMS},
+    {(char*)0,XMLKEY_INVALID},
+    {"namespace",		XMLKEY_NAMESPACE},
+    {"srcinclude",		XMLKEY_SRCINCLUDE},
+    {(char*)0,XMLKEY_INVALID},
     {"allocws",		XMLKEY_ALLOCWS},
+    {"tag",			XMLKEY_TAG},
+    {"desc",			XMLKEY_DESC},
+    {"maintainer",		XMLKEY_MAINTAINER},
+    {"parser",			XMLKEY_PARSER},
+    {"comment",		XMLKEY_COMMENT},
+    {(char*)0,XMLKEY_INVALID},
+    {"blockinfo",		XMLKEY_BLOCKINFO},
+    {(char*)0,XMLKEY_INVALID},
+    {"action",			XMLKEY_ACTION},
+    {"libunit",		XMLKEY_LIBUNIT},
+    {(char*)0,XMLKEY_INVALID},
+    {"path",			XMLKEY_PATH},
+    {"match",			XMLKEY_MATCH},
+    {"constr",			XMLKEY_CONSTR},
+    {"library",		XMLKEY_LIBRARY},
     {(char*)0,XMLKEY_INVALID},
     {"extension",		XMLKEY_EXTENSION},
     {"check",			XMLKEY_CHECK},
-    {"action",			XMLKEY_ACTION},
-    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
+    {"adjust",			XMLKEY_ADJUST},
+    {"version",		XMLKEY_VERSION},
+    {(char*)0,XMLKEY_INVALID},
     {"nativelib",		XMLKEY_NATIVELIB},
-    {"match",			XMLKEY_MATCH},
-    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
+    {"descriptor",		XMLKEY_DESCRIPTOR},
+    {"author",			XMLKEY_AUTHOR},
+    {"keyword",		XMLKEY_KEYWORD},
     {(char*)0,XMLKEY_INVALID},
     {"tree",			XMLKEY_TREE},
-    {"descriptor",		XMLKEY_DESCRIPTOR},
-    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
+    {"value",			XMLKEY_VALUE},
+    {(char*)0,XMLKEY_INVALID},
+    {"allocvs",		XMLKEY_ALLOCVS},
     {(char*)0,XMLKEY_INVALID},
     {"type",			XMLKEY_TYPE},
-    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
-    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
-    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
-    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
-    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
-    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
-    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
-    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
-    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
-    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
-    {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
+    {(char*)0,XMLKEY_INVALID},
+    {"target",			XMLKEY_TARGET},
     {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
     {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
     {(char*)0,XMLKEY_INVALID}, {(char*)0,XMLKEY_INVALID},
