@@ -1,4 +1,5 @@
 
+10/10/2005	frmb	read/write library support, more XML-keys
 09/10/2005	frmb	more library support
 09/10/2005	frmb	fixed up back-end transform
 09/10/2005	frmb	initial support for library building
